@@ -11,7 +11,7 @@ int                      1                                               123
 boolean                  1                                                                                                 
 float                    1                                               123                                               
 validate_regexp                                                                                   O'Henry                  
-validate_url        PHP  1  foo@bar.com    http://a.b.c        1.2.3.4   123  123abc<>()          O'Henry        하퍼    
+validate_url                               http://a.b.c                                                                    
 validate_email              foo@bar.com                                                                                    
 validate_ip                                                    1.2.3.4                                                     
 string              PHP  1  foo@bar.com    http://a.b.c        1.2.3.4   123  123abc()            O&#39;Henry    하퍼    
